<resources>
    <string name="app_name">Cadastro de Produtos</string>

    <!-- SharedPreferences -->
    <string name="arquivo_preferencias" translatable="false">preferencias_locais</string>
    <string name="preferencia_linguagem" translatable="false">linguagem</string>
    <string name="preferencia_moeda" translatable="false">moeda</string>

    <!-- Botões -->
    <string name="botaoAlterar">Alterar</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="botaoContinuar">Continuar</string>
    <string name="botaoCompartilhar">Compartilhar</string>
    <string name="botaoExcluir">Excluir</string>
    <string name="botaoMais">+</string>
    <string name="botaoOK">OK</string>
    <string name="botaoTirarFoto">Tirar foto</string>
    <string name="botaoVoltar">Voltar</string>
    <string name="botaoLigar">Ligue para nós!</string>
    <string name="botaoSim">Sim</string>
    <string name="botaoNao">Não</string>

    <!-- Títulos -->
    <string name="title_erro">Erro</string>
    <string name="title_sucesso">Sucesso</string>
    <string name="title_indefinido">Indefinido</string>
    <string name="title_ativo">Ativo</string>
    <string name="title_inativo">Inativo</string>
    <string name="title_compartilharvia">Compartilhar via</string>

    <!-- Erros -->
    <string name="erro_semmarca">Você deve selecionar uma marca antes de continuar</string>
    <string name="erro_semfoto">Tire uma foto do produto antes de continuar</string>
    <string name="erro_campovazio">Este campo não pode ficar vazio</string>
    <string name="erro_valorzerado">Você não pode deixar o valor do campo menor ou igual a 0</string>
    <string name="erro_semimplementacao">Ainda não implementado</string>
    <string name="erro_implementacaoclasse">Erro ao implementar classe %1$s</string>

    <!-- Mensagens -->
    <string name="mensagem_produtocadastradosucesso">Produto cadastrado com sucesso!</string>
    <string name="mensagem_produtoalteradosucesso">Produto alterado com sucesso!</string>
    <string name="mensagem_produtoexcluidosucesso">Produto excluído com sucesso!</string>
    <string name="mensagem_marcacadastradasucesso">Marca cadastrada com sucesso!</string>
    <string name="mensagem_marcaalteradasucesso">Marca alterada com sucesso!</string>
    <string name="mensagem_marcaexcluidasucesso">Marca excluída com sucesso!</string>
    <string name="mensagem_precoreal">%1$s%2$s</string>
    <string name="mensagem_confirmacaoexclusao">Você tem certeza que deseja excluir este registro?</string>

    <!-- MainActivity -->
    <string name="MainActivity_btnCadastrarProduto">Cadastrar produto</string>
    <string name="MainActivity_btnProdutos">Produtos</string>
    <string name="MainActivity_btnVerProdutos">Ver produtos</string>
    <string name="MainActivity_btnCadastrarMarca">Cadastrar marca</string>
    <string name="MainActivity_btnMarcas">Marcas</string>
    <string name="title_fragmentdadosbasicos">Dados básicos do produto</string>
    <string name="title_fragmentdadosadicionais">Dados adicionais do produto</string>
    <string name="title_fragmentdadosbasicosmarca">Dados básicos da marca</string>

    <!-- Configuracao -->
    <string name="Configuracao_title">Configurações</string>
    <string name="Configuracao_title_subtitulo">Realize mudanças de configuração aqui</string>
    <string name="Configuracao_title_escolhasualingua">Escolha sua lingua</string>
    <string name="Configuracao_title_portugues">Português</string>
    <string name="Configuracao_title_ingles">Inglês</string>
    <string name="Configuracao_title_moeda">Moeda</string>
    <string-array name="Configuracao_array_moedas">
        <item>BRL</item>
        <item>USD</item>
    </string-array>

    <!-- CadastroProdutoDadosBasicos -->
    <string name="CadastroProdutoDadosBasicos_title_nomeproduto">Nome do produto</string>
    <string name="CadastroProdutoDadosBasicos_hint_nomeproduto">Ex: Pendrive 8GB</string>
    <string name="CadastroProdutoDadosBasicos_title_descricaoproduto">Descrição do produto</string>
    <string name="CadastroProdutoDadosBasicos_hint_descricaoproduto">Ex: Armazenamento de dados</string>
    <string name="CadastroProdutoDadosBasicos_title_marcaproduto">Marca do produto</string>
    <string-array name="CadastroProdutoDadosBasicos_array_marcas">
        <item>Selecione uma marca</item>
    </string-array>
    <string name="CadastroProdutoDadosBasico_title_MarcaSelecionada">Nenhuma marca selecionada</string>
    <string name="CadastroProdutoDadosBasico_title_MarcaSelecao">Marca selecionada: %1$s</string>
    <string name="CadastroProdutoDadosBasicos_title_PrecoCompra">Preço de compra (%1$s)</string>
    <string name="CadastroProdutoDadosBasicos_hint_PrecoCompra">Ex: %1$s2.00</string>
    <string name="CadastroProdutoDadosBasicos_title_PrecoVenda">Preço de venda (%1$s)</string>
    <string name="CadastroProdutoDadosBasicos_hint_PrecoVenda">Ex: %1$s4.00</string>

    <!-- CadastroProdutoDadosAdicionais -->
    <string name="CadastroProdutoDadosAdicionais_title_FotoProduto">Foto do produto</string>
    <string name="CadastroProdutoDadosAdicionais_contentdescription_FotoProduto">Tire uma foto do produto</string>
    <string name="CadastroProdutoDadosAdicionais_title_ProdutoAtivo">Produto disponível para venda?</string>

    <!-- CadastroProdutoDadosBasicos -->
    <string name="CadastroMarcaDadosBasicos_title_nomemarca">Nome da marca</string>
    <string name="CadastroMarcaDadosBasicos_hint_nomemarca">Ex: Apple</string>

    <!-- RevisaoDados -->
    <string name="RevisaoDados_title_titulo">Revise os dados</string>
    <string name="RevisaoDados_title_subtitulo">Confirme os dados do produto para finalizar o cadastro, ou aperte em \'Voltar\' para realizar uma alteração.</string>
    <string name="RevisaoDados_title_subtitulo_alteracao">Confirme os dados do produto para finalizar a alteração, ou aperte em \'Voltar\' para realizar uma alteração.</string>
    <string name="RevisaoDados_title_nome">Nome do produto:</string>
    <string name="RevisaoDados_placeholder_nome">Nenhum produto encontrado</string>
    <string name="RevisaoDados_title_descricao">Descricao do produto:</string>
    <string name="RevisaoDados_placeholder_descricao">Nenhuma descrição encontrada</string>
    <string name="RevisaoDados_title_marca">Marca do produto:</string>
    <string name="RevisaoDados_placeholder_marca">Nenhuma marca selecionada</string>
    <string name="RevisaoDados_title_precoCompra">Preço compra: </string>
    <string name="RevisaoDados_placeholder_preco">R$0</string>
    <string name="RevisaoDados_title_precoVenda">Preço venda:</string>
    <string name="RevisaoDados_title_produtoAtivo">Produto será cadastrado como disponível para venda</string>
    <string name="RevisaoDados_title_produtoInativo">Produto será cadastrado como indisponível para venda</string>
    <string name="RevisaoDados_title_compartilhamentoprodutoativo">O produto %1$s já está disponível na minha loja! Acesse em %2$s</string>
    <string name="RevisaoDados_title_compartilhamentoprodutoinativo">Acabei de cadastrar o produto %1$s!</string>

    <!-- ItemListaProduto -->
    <string name="ItemListaProduto_title_marcaproduto">Marca do produto</string>
    <string name="ItemListaProduto_title_nomeproduto">Nome do produto</string>
    <string name="ItemListaProduto_title_precovenda">R$0</string>
    <string name="ItemListaProduto_title_statusproduto">Produto disponível/indisponível</string>

    <!-- ItemListaProdutoVazio -->
    <string name="ItemListaProduto_title_nenhumproduto">Nenhum produto cadastrado</string>

    <!-- ItemListaMarcaVazio -->
    <string name="ItemListaMarca_title_nenhumamarca">Nenhuma marca cadastrada</string>
    <string name="ItemListaProduto_title_nenhumamarca">Nenhuma marca cadastrada</string>
</resources>
