<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="rblstudios.com.cadastroproduto.view.RevisaoDados">

    <TextView
        android:id="@+id/RevisaoDados_txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/RevisaoDados_title_titulo"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/RevisaoDados_txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RevisaoDados_txtTitulo"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/RevisaoDados_title_subtitulo"
        android:textSize="12sp" />

    <View
        android:id="@+id/RevisaoDados_divisoriaUm"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/RevisaoDados_txtSubtitulo"
        android:layout_marginTop="5dp"
        android:background="#90909090"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RevisaoDados_divisoriaUm"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/RevisaoDados_imgProduto"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/placeholder_imagem" />

        <RelativeLayout
            android:id="@+id/RevisaoDados_RelativeNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RevisaoDados_imgProduto"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/RevisaoDados_txtMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/RevisaoDados_title_marca"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/RevisaoDados_txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/RevisaoDados_txtMarca"
                android:layout_toRightOf="@id/RevisaoDados_txtMarca"
                android:fontFamily="sans-serif-medium"
                android:text="@string/RevisaoDados_placeholder_nome"
                android:textColor="@color/preto"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/RevisaoDados_txtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RevisaoDados_RelativeNomeProduto"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"
            android:text="@string/RevisaoDados_placeholder_descricao" />

        <View
            android:id="@+id/RevisaoDados_divisoriaDois"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_below="@id/RevisaoDados_txtDescricao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="#90909090"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <RelativeLayout
            android:id="@+id/RevisaoDados_RelativePrecoCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RevisaoDados_divisoriaDois"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/RevisaoDados_txtTitlePrecoCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/RevisaoDados_title_precoCompra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RevisaoDados_txtPrecoCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/RevisaoDados_txtTitlePrecoCompra"
                android:layout_toRightOf="@id/RevisaoDados_txtTitlePrecoCompra"
                android:text="@string/RevisaoDados_placeholder_preco"
                android:textColor="@color/preto"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RevisaoDados_RelativePrecoVenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RevisaoDados_RelativePrecoCompra"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/RevisaoDados_txtTitlePrecoVenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/RevisaoDados_title_precoVenda"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RevisaoDados_txtPrecoVenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/RevisaoDados_txtTitlePrecoVenda"
                android:layout_toRightOf="@id/RevisaoDados_txtTitlePrecoVenda"
                android:text="@string/RevisaoDados_placeholder_preco"
                android:textColor="@color/preto"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/RevisaoDados_txtProdutoAtivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RevisaoDados_RelativePrecoVenda"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/title_indefinido" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/RevisaoDados_btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:background="@drawable/btntransparentecomborda"
                android:text="@string/botaoVoltar" />

            <Button
                android:id="@+id/RevisaoDados_btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight=".5"
                android:background="@drawable/btntransparentecomborda"
                android:text="@string/botaoCadastrar" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
