<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ItemListaProduto_imgProduto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/placeholder_imagem" />

    <TextView
        android:id="@+id/ItemListaProduto_marcaProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ItemListaProduto_imgProduto"
        android:layout_toRightOf="@id/ItemListaProduto_imgProduto"
        android:fontFamily="sans-serif-black"
        android:paddingTop="32dp"
        android:text="@string/ItemListaProduto_title_marcaproduto" />

    <TextView
        android:id="@+id/ItemListaProduto_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ItemListaProduto_marcaProduto"
        android:layout_toRightOf="@id/ItemListaProduto_marcaProduto"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="32dp"
        android:text="@string/ItemListaProduto_title_nomeproduto" />

    <TextView
        android:id="@+id/ItemListaProduto_precoVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ItemListaProduto_nomeProduto"
        android:layout_toEndOf="@id/ItemListaProduto_imgProduto"
        android:layout_toRightOf="@id/ItemListaProduto_imgProduto"
        android:fontFamily="sans-serif-thin"
        android:text="@string/ItemListaProduto_title_precovenda" />

    <TextView
        android:id="@+id/ItemListaProduto_ativoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ItemListaProduto_nomeProduto"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ItemListaProduto_precoVenda"
        android:layout_toRightOf="@id/ItemListaProduto_precoVenda"
        android:fontFamily="sans-serif-thin"
        android:text="@string/ItemListaProduto_title_statusproduto" />

    <Button
        android:id="@+id/ItemListaProduto_btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/botaoExcluir"
        android:textColor="@color/vermelho"
        android:textSize="12sp" />

    <View
        android:id="@+id/ItemListaProduto_divisoriaDois"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ItemListaProduto_imgProduto"
        android:background="#90909090" />

</RelativeLayout>
