<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".view.CadastroProduto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/title_fragmentdadosbasicosmarca" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#90909090"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/CadastroMarcaDadosBasico_RelativeLayoutCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/CadastroMarcaDadosBasico_txtNomeMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CadastroMarcaDadosBasicos_title_nomemarca" />

        <EditText
            android:id="@+id/CadastroMarcaDadosBasico_etNomeMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CadastroMarcaDadosBasico_txtNomeMarca"
            android:hint="@string/CadastroMarcaDadosBasicos_hint_nomemarca"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/CadastroMarcaDadosBasico_btnCadastrarMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btntransparentecomborda"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/botaoCadastrar" />

    </android.support.percent.PercentRelativeLayout>
</LinearLayout>